fix: visibiliy: hidden does not work with jquery

--- a/www/style.css
+++ b/www/style.css
@@ -127,5 +127,5 @@
 }
 
 #plot-container {
-  visibility: hidden;
+  display: none;
 }
